<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/relay1"
     >

    <LinearLayout
        android:id="@+id/help_linear"
        android:layout_width="match_parent"
        android:background="@drawable/popup_background"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
<!-- android:background="@drawable/popup" -->
            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/grey_logout"
                android:text="@string/delete_account_text"
                android:textSize="15sp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                 >

                <Button
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="7dp"
                    android:background="@drawable/theme_light_button_corner"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
                
                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/theme_button_corner"
                    android:padding="7dp"
                    android:layout_below="@+id/help_linear"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
                 
            </LinearLayout>

    </LinearLayout>

</RelativeLayout>