<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relay1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background" >

    <LinearLayout
        android:id="@+id/help_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- android:background="@drawable/popup" -->

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/logout_text"
            android:textColor="@color/grey_logout"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/theme_light_button_corner"
                android:drawableLeft="@drawable/logout"
                android:drawablePadding="5dp"
                android:paddingBottom="7dp"
                android:paddingLeft="30dp"
                android:paddingRight="7dp"
                android:paddingTop="7dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/theme_button_corner"
                android:drawableLeft="@drawable/cancel"
                android:drawablePadding="5dp"
                android:paddingBottom="7dp"
                android:paddingLeft="30dp"
                android:paddingRight="7dp"
                android:paddingTop="7dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>