<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imgpair"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/splash" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgpair"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/osvin_login"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llLoginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <com.appdupe.pair.ExtendedGallery
            android:id="@+id/gallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:spacing="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/image_count_homescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/txtLoginPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/osvin_privacy_policy"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnLoginFaceBook"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/facebook" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
           android:layout_marginTop="15dp"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="30dp"
         
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_alignTop="@+id/imageView1"
                android:layout_marginLeft="10dp"
                
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/osvin_below_facebook"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacylayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/privacybg"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/loginwithfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/facebook_btn"
            android:text="Sign in with Facebook"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/wetakeyourprivacy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="We take privacy seriously"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textviewfirst"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="• We will never post anything to \nFacebook"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textviewthird"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="• Other users will never know if \nyou’ve liked them unless they like \nyou back"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textviewfourth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="• Other users cannot contact you \nunless you’ve already been matched"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textviewfifth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="• Your location will never be shown to other users"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>